--- a/paper_binsim.ipynb
+++ b/paper_binsim.ipynb
@@ -4825,7 +4825,7 @@
    ],
    "source": [
     "accuracy_stats = pd.DataFrame({'Average accuracy': accuracies.mean(axis=0),\n",
-    "                               'STD': accuracies.std(axis=0)/ accuracies.count(axis=0)})\n",
+    "                               'STD': accuracies.std(axis=0)})\n",
     "accuracy_stats = accuracy_stats.assign(dataset=[RF_all[name]['dataset'] for name in RF_all],\n",
     "                                       treatment=[RF_all[name]['treatment'] for name in RF_all])\n",
     "accuracy_stats"
@@ -9375,7 +9375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
