Minor bug fix (writing JSON file after PLS-DA application).

--- a/paper_binsim_supervised.ipynb
+++ b/paper_binsim_supervised.ipynb
@@ -4843,7 +4843,10 @@
     "                                    feat_type='VIP')\n",
     "            PLSDA_all[plsdaname].update(fit)\n",
     "            print(f'done')     \n",
-    "    PLSDA_all\n"
+    "    PLSDA_all\n",
+    "    fname = 'paperimages/PLSDA_all.json'\n",
+    "    with open(fname, \"w\", encoding='utf8') as write_file:\n",
+    "        json.dump(RF_all, write_file)"
    ]
   },
   {
