Minor comment changes and additions.

--- a/paper_binsim_permuts.ipynb
+++ b/paper_binsim_permuts.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Notebook to support the study on the application of **Bin**ary **Sim**plification as a competing form of pre-processing procedure for high-resolution metabolomics data.\n",
     "\n",
-    "This is notebook `paper_binsim_permuts.ipynb`\n",
+    "This is notebook `paper_binsim_permuts.ipynb`.\n",
     "\n",
     "\n",
     "## Organization of the Notebook\n",
@@ -2105,7 +2105,9 @@
     "\n",
     "For that a random k-fold cross-validation is performed on the original dataset (to serve as a comparation point) and on 500 permutations of datasets with labels randomly shuffled around. The models are evaluated by their predictive accuracies. \n",
     "\n",
-    "The empirical p-value is given by (the number of times the permutation accuracy was bigger than the random k-fold cross-validation made with the original dataset + 1) / (number of permutations + 1) (source: Ojala2010 - error should be the opposite of the accuracy).\n",
+    "The empirical p-value is given by (the number of times the permutation accuracy was bigger than the random k-fold cross-validation made with the original dataset + 1) / (number of permutations + 1) (source: Ojala and Garriga, 2010).\n",
+    "\n",
+    "Ojala M, Garriga GC. Permutation Tests for Studying Classifier Performance. In: 2009 Ninth IEEE International Conference on Data Mining. ; 2009:908-913. doi:10.1109/ICDM.2009.108\n",
     "\n",
     "Histograms with the prediction accuracy of the different permutations were plotted and compared to the accuracy got with the original dataset.\n",
     "\n",
@@ -2121,7 +2123,6 @@
    "outputs": [],
    "source": [
     "# json for persistence\n",
-    "\n",
     "import json\n",
     "from time import perf_counter"
    ]
@@ -2169,7 +2170,8 @@
     "            permuts_RF.append(res)\n",
     "            end = perf_counter()\n",
     "            print(f'Done! took {(end - start):.3f} s')\n",
-    "\n",
+    "    \n",
+    "    # Store in json file\n",
     "    fname = 'permuts/permuts_rf.json'\n",
     "    with open(fname, \"w\", encoding='utf8') as write_file:\n",
     "        json.dump(permuts_RF, write_file)"
@@ -2213,6 +2215,8 @@
     "            permuts_PLSDA.append(res)\n",
     "            end = perf_counter()\n",
     "            print(f'Done! took {(end - start):.3f} s')\n",
+    "            \n",
+    "    # Store in json file\n",
     "    fname = 'permuts/permuts_plsda.json'\n",
     "    with open(fname, \"w\", encoding='utf8') as write_file:\n",
     "        json.dump(permuts_PLSDA, write_file)"
@@ -2259,6 +2263,7 @@
     }
    ],
    "source": [
+    "# Get data from json file - random forests\n",
     "fname = 'permuts/permuts_rf.json'\n",
     "with open(fname, \"r\", encoding='utf8') as read_file:\n",
     "    permuts_RF = json.load(read_file)\n",
@@ -2308,6 +2313,7 @@
     }
    ],
    "source": [
+    "# Get data from json file - PLS-DA\n",
     "fname = 'permuts/permuts_plsda.json'\n",
     "with open(fname, \"r\", encoding='utf8') as read_file:\n",
     "    permuts_PLSDA = json.load(read_file)\n",
@@ -2325,6 +2331,7 @@
     "Nº Occurences (of the permutations) vs CV prediction acuracy - The distribution of average prediction accuracy of 500 permutations\n",
     "\n",
     "1st Figure - Random Forest\n",
+    "\n",
     "2nd Figure - PLS-DA"
    ]
   },
