--- a/paper_binsim_supervised.ipynb
+++ b/paper_binsim_supervised.ipynb
@@ -2299,7 +2299,7 @@
     "    clf = GridSearchCV(rf, values, cv=3)\n",
     "    clf_2class = GridSearchCV(rf, values, cv=5)\n",
     "\n",
-    "    # For each dataset,building the Random Forest models with the different number of trees\n",
+    "    # For each dataset, building the Random Forest models with the different number of trees\n",
     "    # and storing the predictive accuracy (estimated by k-fold cross-validation)\n",
     "    param = []\n",
     "    test_score = []\n",
@@ -4314,7 +4314,7 @@
     "\n",
     "For each benchmark data set, 4 differently-treated data sets were obtained. These each have their own set of important features (top 2% chosen). The following cells compute the number of features in common between those sets (common in all 4, in each possible set of 3 and 2 and exclusive to only 1) for each benchmark data set.\n",
     "\n",
-    "Be careful with features present in all sets, in 3 of the sets and in 2 sets for calculating values for Venn Diagram."
+    "The features appearing in all 4 are not taken into account for counting the features that appear in each set of 3 or sets of 2, and the same for the features in sets of 3 not appearing in the counts for the sets of 2. This is made so all values can be directly put into Venn Diagram without the need for further calculation."
    ]
   },
   {
@@ -4419,7 +4419,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6597,7 +6599,7 @@
     "\n",
     "For each benchmark data set, 4 differently-treated data sets were obtained. These each have their own set of important features (top 2% chosen). The following cells compute the number of features in common between those sets (common in all 4, in each possible set of 3 and 2 and exclusive to only 1) for each benchmark data set.\n",
     "\n",
-    "Be careful with features present in all sets, in 3 of the sets and in 2 sets for calculating values for Venn Diagram."
+    "The features appearing in all 4 are not taken into account for counting the features that appear in each set of 3 or sets of 2, and the same for the features in sets of 3 not appearing in the counts for the sets of 2. This is made so all values can be directly put into Venn Diagram without the need for further calculation."
    ]
   },
   {
