--- a/paper_binsim_unsupervised.ipynb
+++ b/paper_binsim_unsupervised.ipynb
@@ -2372,7 +2372,7 @@
     "    return lbl_handles\n",
     "\n",
     "def plot_PCA(principaldf, label_colors, components=(1,2), title=\"PCA\", ax=None):\n",
-    "    \"Plot the projection of samples in the 2 main components of a PLS-DA model.\"\n",
+    "    \"Plot the projection of samples in the 2 main components of a PCA model.\"\n",
     "    \n",
     "    if ax is None:\n",
     "        ax = plt.gca()\n",
@@ -2396,7 +2396,7 @@
     "    ax.set_title(title, fontsize=15)\n",
     "\n",
     "def plot_ellipses_PCA(principaldf, label_colors, components=(1,2),ax=None, q=None, nstd=2):\n",
-    "    \"Plot the projection of samples in the 2 main components of a PLS-DA model.\"\n",
+    "    \"Plot confidence ellipses of a class' samples based on their projection in the 2 main components of a PCA model.\"\n",
     "    \n",
     "    if ax is None:\n",
     "        ax = plt.gca()\n",
@@ -3834,6 +3834,7 @@
    "source": [
     "def compute_clustering_metrics(res_dict, labels):\n",
     "    \"\"\"Fill dict with clustering performance metrics.\"\"\"\n",
+    "    \n",
     "    discrim = ma.dist_discrim(res_dict['Z'], labels, # all samples have the same order\n",
     "                              method = 'average')\n",
     "    res_dict['Average discrim dist'] = discrim[0]\n",
