Bug fix (wrong data was being written into PLSDA_all json file).

--- a/paper_binsim_supervised.ipynb
+++ b/paper_binsim_supervised.ipynb
@@ -4848,7 +4848,7 @@
     "    PLSDA_all\n",
     "    fname = 'paperimages/PLSDA_all.json'\n",
     "    with open(fname, \"w\", encoding='utf8') as write_file:\n",
-    "        json.dump(RF_all, write_file)"
+    "        json.dump(PLSDA_all, write_file)"
    ]
   },
   {
