Added dataset HD analysis. Permutation test results are stored in folder paperimages.

--- a/paper_binsim_data_prep.ipynb
+++ b/paper_binsim_data_prep.ipynb
@@ -10,13 +10,15 @@
     "\n",
     "This is notebook `paper_binsim_data_prep.ipynb`\n",
     "\n",
+    "In this notebook, the benchmark datasets are cleaned, transformed into data matrices and pre-treatment procedures are carried out, including BinSim.\n",
+    "\n",
     "\n",
     "## Organization of the Notebook\n",
     "\n",
     "- Set up database of data sets\n",
     "- Application of different pre-treatments (including BinSim) to each data set\n",
-    "- Create persistance storage of data\n",
-    "- Analyse dataset characteristics\n"
+    "- Creation of persistance storage of data\n",
+    "- Analysis of dataset characteristics"
    ]
   },
   {
@@ -57,13 +59,7 @@
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.impute import IterativeImputer\n",
-    "from sklearn.linear_model import BayesianRidge\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import ExtraTreesRegressor\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "\n",
     "# Metabolinks package\n",
     "import metabolinks as mtl\n",
@@ -183,6 +179,15 @@
     "- Data set named `YD2` (YD 6/15) was generated after retaining only features that occur (globally) at least six times in all 15 samples (filtering/alignment).\n",
     "\n",
     "For the purpose of assessing the performance of supervised methods, this data set was used with target labels defining classes corresponding to replicates of each of the 4 yeast strains."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Human dataset\n",
+    "\n",
+    "The human dataset (*HD*) is decribed, processed and pre-treated in notebook `paper_binsim_dataset_HD.ipynb`"
    ]
   },
   {
@@ -3650,7 +3655,7 @@
     "# should not raise AssertionError:\n",
     "assert_frame_equal(roundrobin, datasets['GD_neg_class2']['NGP'].transpose())\n",
     "\n",
-    "# check all dataframes in datasets and rr_datasets\n",
+    "# check all dataframes are equal in retrieved data and memory data\n",
     "for dskey, dataset in datasets.items():\n",
     "    for key, value in dataset.items():\n",
     "        if isinstance(value, pd.DataFrame):\n",
@@ -4071,6 +4076,8 @@
    "source": [
     "### Dataset Characteristics\n",
     "\n",
+    "<font color='darkred'>Warning: this section was repeated in notebook `paper_binsim_dataset_HD.ipynb` and adatset HD is included there</font>\n",
+    "\n",
     "Building a table with general characteristics about the 7 data sets studied."
    ]
   },
@@ -4263,7 +4270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_characteristics.to_excel('paperimages/dataset_characteristics.xlsx', index=True)"
+    "#data_characteristics.to_excel('paperimages/dataset_characteristics.xlsx', index=True)"
    ]
   },
   {
@@ -4477,8 +4484,8 @@
     "                    bbox=dict(facecolor='white', alpha=0.9))\n",
     "        \n",
     "        plt.show()\n",
-    "        f.savefig('paperimages/PCAs.pdf', dpi=200)\n",
-    "        f.savefig('paperimages/PCAs.png', dpi=600)\n"
+    "        #f.savefig('paperimages/PCAs.pdf', dpi=200)\n",
+    "        #f.savefig('paperimages/PCAs.png', dpi=600)\n"
    ]
   },
   {
@@ -4611,13 +4618,6 @@
     "fig.suptitle('GDc2-', fontsize = 16, y=0.95)\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
